fix(ui): tooltip--position-bottom overlapping with input field

--- a/packages/ui/src/elements/Tooltip/index.scss
+++ b/packages/ui/src/elements/Tooltip/index.scss
@@ -64,7 +64,7 @@
     }
 
     &--position-bottom {
-      bottom: calc(var(--base) * -1.25);
+      bottom: calc(var(--base) * -1.75);
       transform: translate3d(-50%, var(--caret-size), 0);
 
       &::after {
